# serializer version: 1
# name: test_all_entities[number.1p7k_500006_dynamic_limit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.1p7k_500006_dynamic_limit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dynamic limit',
    'platform': 'lektrico',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dynamic_limit',
    'unique_id': '500006_dynamic_limit',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_all_entities[number.1p7k_500006_dynamic_limit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '1p7k_500006 Dynamic limit',
      'max': 32,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.1p7k_500006_dynamic_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32',
  })
# ---
# name: test_all_entities[number.1p7k_500006_led_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.1p7k_500006_led_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Led brightness',
    'platform': 'lektrico',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'led_max_brightness',
    'unique_id': '500006_led_max_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[number.1p7k_500006_led_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '1p7k_500006 Led brightness',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.1p7k_500006_led_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
